cmake_minimum_required(VERSION 3.0.0)
project(OpenGL VERSION 0.1.0)
SET(SOURCE /home/darnoc/Documents/OpenGL/OpenGL/main.cpp)
set(SOURCE_FILES /home/darnoc/Documents/OpenGL/main.cpp)

add_executable(${PROJECT_NAME} ${SOURCE})

find_package(PkgConfig REQUIRED)
pkg_search_module(GLFW REQUIRED)
include_directories(${GLFW_INCLUDE_DIRS})
target_link_libraries(OpenGL ${GLFW_STATIC_LIBRARIES})

find_package(GLEW)
if (GLEW_FOUND)
    include_directories(${GLEW_INCLUDE_DIRS})
    target_link_libraries (OpenGL ${GLEW_LIBRARIES})
endif (GLEW_FOUND)

find_package(glfw3)
if (glfw3_FOUND)
    include_directories(${glfw3_INCLUDE_DIRS})
    target_link_libraries (OpenGL ${glfw3_LIBRARIES})
endif (glfw3_FOUND)

include(CTest)
enable_testing()

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY /home/darnoc/Documents/OpenGL/build/)
set(BASE_DIR /home/darnoc/Documents/OpenGL/)
set(GLEW /home/darnoc/Documents/glew-2.2.0/include/GL/glew.h)
set(GLFW3 /home/darnoc/Documents/glfw-3.3.2/include/GLFW/glfw3.h)
set(GL /usr/include/GL/glew.h)
set(GL /usr/include/glm/glm.hpp)
set(GL /usr/include/glm/gtc/matrix_transform.hpp)
set(glew /home/darnoc/Documents/OpenGL/Dependencies/GLEW/include/glew.h)
set(glfw3 /home/darnoc/Documents/OpenGL/Dependencies/GLFW/include/glfw3.h)

link_directories(/home/darnoc/Documents/vcpkg/packages/glew_x64-linux/share/glew/vcpkg-cmake-wrapper.cmake)
link_directories(/usr/lib64)
link_directories(/usr/include)
link_directories(/usr/lib/x86_64-linux-gnu)
link_directories(/home/darnoc/Documents/glew-2.2.0)
link_directories(/home/darnoc/Documents/glfw-3.3.2) 
link_directories(/home/darnoc/Documents/freeglut-3.2.1)
link_directories(/home/darnoc/Documents/OpenGL/Dependencies/GLEW/include)
link_directories(/home/darnoc/Documents/OpenGL/Dependencies/GLFW/include)
include_directories(/usr/lib64)
include_directories(/usr/include)
include_directories(/usr/lib)
include_directories(/usr/lib/x86_64-linux-gnu)
include_directories(/home/darnoc/Documents/OpenGL/Dependencies)
include_directories(/home/darnoc/Documents/glew-2.2.0)
include_directories(/home/darnoc/Documents/glfw-3.3.2) 
